# drjax

./: README.md  pyproject.toml  requirements.txt
.github/workflows/: test_project.yaml
drjax/: __init__.py
drjax/_src/: api.py  api_test.py  impls.py  impls_sharding_test.py  impls_test.py  primitives.py  primitives_test.py
